# papers

./: .gitignore  .gitignore.swp  LICENSE  README.md  pyproject.toml  requirements.txt
markdown/: deep_learning.md  econometrics.md  real_time_bidding.md  reinforcement_learning.md  statistics.md
src/paper_bot/: paper_bot.py
walmart/: todo.md
walmart/Other/: perm_timeline.md
walmart/Seminars/: transformers_in_time_series.md
walmart/interview/: ML design.md  coding_questions.md  deep learning fundamentals.md
walmart/interview/design/: data
walmart/interview/lc/: backtrack.py  binary_search.py
walmart/interview/pandas/: Time Series.md
walmart/projects/: mapping tables.md  notes.md
walmart/projects/Seasonal_campaigns/: Untitled.md
walmart/projects/TTD DSP/: TTD_DSP_v03.md  TTD_DSP_v04.md  TTD_DSP_v05.md  airflow.md  data.md  dimension_param_est.md  dsp_scratch.md  evaluation.md  todo.md
