[project]
name = "paper_bot"
version = "0.0.1"
authors = [
  { name="Hangjian Li", email="lhans1993@gmail.com" },
]
description = "A package for paper management"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


